Fixed the PermGen errors I was getting by adding some jvm-opts